tests/parser/invalid/syntax_errors/test_invalid_declaration.src
int;
fn () -> void {}
struct {}
int x, ;
float y = ;
bool = true;